--- a/css/main.css
+++ b/css/main.css
@@ -366,9 +366,10 @@ float: left;
 .contactitem {
 	background-color: #8AAFFF;
 	color: black;
-	margin: 0px;
-	padding: 0px;
+	margin: 10px 0;
+	padding: 10px 0;
 	min-width: 400px;
+    min-height: 50px;
 }
 
 .contactitem>i {
