--- a/css/main.css
+++ b/css/main.css
@@ -14,15 +14,6 @@ body {
 }
 
 
-/* h1 {
-	font-family: 'PT Serif', serif;
-	font-size: 1.6rem;
-	color: red;
-	line-height: 1.67rem;
-	margin-top: 2rem;
-	margin-bottom: 1rem;
-	text-shadow: 1px 1px gray;
-} */
 
 h1 {
 	font-family: Helvetical, sans-serif;
@@ -51,14 +42,15 @@ h5 {
 
 #pageheader {
     color: white;
-    background: rgba(28,75,217,1);
-    background: -moz-linear-gradient(top, rgba(28,75,217,1) 0%, rgba(28,75,217,1) 78%, rgba(28,75,217,1) 92%, rgba(28,28,28,1) 97%, rgba(19,19,19,1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(28,75,217,1)), color-stop(78%, rgba(28,75,217,1)), color-stop(92%, rgba(28,75,217,1)), color-stop(97%, rgba(28,28,28,1)), color-stop(100%, rgba(19,19,19,1)));
-    background: -webkit-linear-gradient(top, rgba(28,75,217,1) 0%, rgba(28,75,217,1) 78%, rgba(28,75,217,1) 92%, rgba(28,28,28,1) 97%, rgba(19,19,19,1) 100%);
-    background: -o-linear-gradient(top, rgba(28,75,217,1) 0%, rgba(28,75,217,1) 78%, rgba(28,75,217,1) 92%, rgba(28,28,28,1) 97%, rgba(19,19,19,1) 100%);
-    background: -ms-linear-gradient(top, rgba(28,75,217,1) 0%, rgba(28,75,217,1) 78%, rgba(28,75,217,1) 92%, rgba(28,28,28,1) 97%, rgba(19,19,19,1) 100%);
-    background: linear-gradient(to bottom, rgba(28,75,217,1) 0%, rgba(28,75,217,1) 78%, rgba(28,75,217,1) 92%, rgba(28,28,28,1) 97%, rgba(19,19,19,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1c4bd9', endColorstr='#131313', GradientType=0 );
+
+    background: rgba(82,113,235,1);
+    background: -moz-linear-gradient(top, rgba(82,113,235,1) 0%, rgba(77,91,240,1) 94%, rgba(0,0,0,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(82,113,235,1)), color-stop(94%, rgba(77,91,240,1)), color-stop(100%, rgba(0,0,0,1)));
+    background: -webkit-linear-gradient(top, rgba(82,113,235,1) 0%, rgba(77,91,240,1) 94%, rgba(0,0,0,1) 100%);
+    background: -o-linear-gradient(top, rgba(82,113,235,1) 0%, rgba(77,91,240,1) 94%, rgba(0,0,0,1) 100%);
+    background: -ms-linear-gradient(top, rgba(82,113,235,1) 0%, rgba(77,91,240,1) 94%, rgba(0,0,0,1) 100%);
+    background: linear-gradient(to bottom, rgba(82,113,235,1) 0%, rgba(77,91,240,1) 94%, rgba(0,0,0,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5271eb', endColorstr='#000000', GradientType=0 );
 
 }
 
@@ -440,14 +432,15 @@ form {
 
 #footer-sitemap {
     background: rgba(19,19,19,1);
-    background: -moz-linear-gradient(top, rgba(19,19,19,1) 0%, rgba(28,28,28,1) 3%, rgba(28,75,217,1) 8%, rgba(28,75,217,1) 22%, rgba(28,75,217,1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(19,19,19,1)), color-stop(3%, rgba(28,28,28,1)), color-stop(8%, rgba(28,75,217,1)), color-stop(22%, rgba(28,75,217,1)), color-stop(100%, rgba(28,75,217,1)));
-    background: -webkit-linear-gradient(top, rgba(19,19,19,1) 0%, rgba(28,28,28,1) 3%, rgba(28,75,217,1) 8%, rgba(28,75,217,1) 22%, rgba(28,75,217,1) 100%);
-    background: -o-linear-gradient(top, rgba(19,19,19,1) 0%, rgba(28,28,28,1) 3%, rgba(28,75,217,1) 8%, rgba(28,75,217,1) 22%, rgba(28,75,217,1) 100%);
-    background: -ms-linear-gradient(top, rgba(19,19,19,1) 0%, rgba(28,28,28,1) 3%, rgba(28,75,217,1) 8%, rgba(28,75,217,1) 22%, rgba(28,75,217,1) 100%);
-    background: linear-gradient(to bottom, rgba(19,19,19,1) 0%, rgba(28,28,28,1) 3%, rgba(28,75,217,1) 8%, rgba(28,75,217,1) 22%, rgba(28,75,217,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#131313', endColorstr='#1c4bd9', GradientType=0 );
 
+    background: rgba(0,0,0,1);
+    background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(77,91,240,1) 3%, rgba(77,91,240,1) 7%, rgba(33,43,82,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,1)), color-stop(3%, rgba(77,91,240,1)), color-stop(7%, rgba(77,91,240,1)), color-stop(100%, rgba(33,43,82,1)));
+    background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(77,91,240,1) 3%, rgba(77,91,240,1) 7%, rgba(33,43,82,1) 100%);
+    background: -o-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(77,91,240,1) 3%, rgba(77,91,240,1) 7%, rgba(33,43,82,1) 100%);
+    background: -ms-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(77,91,240,1) 3%, rgba(77,91,240,1) 7%, rgba(33,43,82,1) 100%);
+    background: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(77,91,240,1) 3%, rgba(77,91,240,1) 7%, rgba(33,43,82,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#212b52', GradientType=0 );
 	padding-top: 4em;
 	padding-bottom: 2em;
 }
