--- a/css/main.css
+++ b/css/main.css
@@ -1,33 +1,25 @@
-<style>
 @import url('https://fonts.googleapis.com/css?family=Gochi+Hand|Open+Sans|PT+Sans|PT+Serif&display=swap');
-</style>
-
-
-
-
-* {
-    font-family: 'PT Sans', 'Open Sans', sans-serif
-}
-
 body {
-    height: 100%;
+	font-family: 'PT Sans', 'Open Sans', sans-serif;
+	font-size: 18px;
+	min-height: 100%;
+	padding-bottom: 20px;
+	background-color: #e0f9ff;
 }
-
-
 
 h1 {
 	font-family: Helvetical, sans-serif;
 	display: inline-block;
 	font-size: 20px;
-    line-height: 22px;
+	line-height: 22px;
 	margin-top: 50px;
 	margin-bottom: 30px;
 	background-color: #ff00d0;
-    color: white;
+	color: white;
 	padding: 4px 25px;
 	border-radius: 0 25px 0 25px;
 	font-weight: bold;
-    text-shadow: 1px 1px gray;
+	text-shadow: 1px 1px gray;
 }
 
 h5 {
@@ -36,36 +28,28 @@ h5 {
 	font-weight: bold;
 }
 
-
+/* PAGE HEADER */
 
 /* Page Header gradient background */
 
 #pageheader {
-    color: white;
-
-    background: rgba(82,113,235,1);
-    background: -moz-linear-gradient(top, rgba(82,113,235,1) 0%, rgba(77,91,240,1) 94%, rgba(0,0,0,1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(82,113,235,1)), color-stop(94%, rgba(77,91,240,1)), color-stop(100%, rgba(0,0,0,1)));
-    background: -webkit-linear-gradient(top, rgba(82,113,235,1) 0%, rgba(77,91,240,1) 94%, rgba(0,0,0,1) 100%);
-    background: -o-linear-gradient(top, rgba(82,113,235,1) 0%, rgba(77,91,240,1) 94%, rgba(0,0,0,1) 100%);
-    background: -ms-linear-gradient(top, rgba(82,113,235,1) 0%, rgba(77,91,240,1) 94%, rgba(0,0,0,1) 100%);
-    background: linear-gradient(to bottom, rgba(82,113,235,1) 0%, rgba(77,91,240,1) 94%, rgba(0,0,0,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5271eb', endColorstr='#000000', GradientType=0 );
-
+	color: white;
+	background: rgba(82, 113, 235, 1);
+	background: -moz-linear-gradient(top, rgba(82, 113, 235, 1) 0%, rgba(77, 91, 240, 1) 94%, rgba(0, 0, 0, 1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(82, 113, 235, 1)), color-stop(94%, rgba(77, 91, 240, 1)), color-stop(100%, rgba(0, 0, 0, 1)));
+	background: -webkit-linear-gradient(top, rgba(82, 113, 235, 1) 0%, rgba(77, 91, 240, 1) 94%, rgba(0, 0, 0, 1) 100%);
+	background: -o-linear-gradient(top, rgba(82, 113, 235, 1) 0%, rgba(77, 91, 240, 1) 94%, rgba(0, 0, 0, 1) 100%);
+	background: -ms-linear-gradient(top, rgba(82, 113, 235, 1) 0%, rgba(77, 91, 240, 1) 94%, rgba(0, 0, 0, 1) 100%);
+	background: linear-gradient(to bottom, rgba(82, 113, 235, 1) 0%, rgba(77, 91, 240, 1) 94%, rgba(0, 0, 0, 1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5271eb', endColorstr='#000000', GradientType=0);
 }
 
-
-
-
-/* Boostrap4 Component Navbar */
+/* Page Header Boostrap4 Component Navbar */
 
 .navbar {
-
 	border-radius: 0;
-    font-size:24px;
-
+	font-size: 24px;
 }
-
 
 .navbarlink a:linked,
 visited {
@@ -76,42 +60,49 @@ visited {
 .navbarlink a:hover {
 	text-decoration: underline;
 	font-weight: bold;
-
 }
 
 .navbarlink a:active {
 	text-decoration: none;
 	font-weight: bold;
-
 }
 
+/* PAGE MAIN */
 
-/* Boostrap4 Component Jumbotron */
+/* Page Main section's gradient background */
+
+#pagemain {
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0, 0, 0, 1)), color-stop(2%, rgba(224, 249, 255, 1)), color-stop(4%, rgba(224, 249, 255, 1)), color-stop(100%, rgba(224, 249, 255, 1)));
+	background: -webkit-linear-gradient(top, rgba(0, 0, 0, 1) 0%, rgba(224, 249, 255, 1) 2%, rgba(224, 249, 255, 1) 4%, rgba(224, 249, 255, 1) 100%);
+	background: -o-linear-gradient(top, rgba(0, 0, 0, 1) 0%, rgba(224, 249, 255, 1) 2%, rgba(224, 249, 255, 1) 4%, rgba(224, 249, 255, 1) 100%);
+	background: -ms-linear-gradient(top, rgba(0, 0, 0, 1) 0%, rgba(224, 249, 255, 1) 2%, rgba(224, 249, 255, 1) 4%, rgba(224, 249, 255, 1) 100%);
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(224, 249, 255, 1) 2%, rgba(224, 249, 255, 1) 4%, rgba(224, 249, 255, 1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#e0f9ff', GradientType=0);
+}
+
+/* Page Main's Boostrap4 Component Jumbotron */
 
 .jumbotron {
-    background-image: url("../images/heroimagecombi1920x600.png");
-    background-position: center;
-    background-color: #2948ff;
-    background-repeat: no-repeat;
-
-
+	background-image: url("../images/heroimagecombi1920x600.png");
+	background-position: center;
+	background-color: #2948ff;
+	background-repeat: no-repeat;
 	margin: 0;
 	padding: 0;
 	border-radius: 0;
 }
 
-/* Responsive Hero Image */
+/* Page Main's Responsive Hero Image */
 
 .hero-image-md {
 	text-align: right;
 }
 
-/* Responsive Text beside Hero Image */
+/* Page Main's Responsive Text beside Hero Image */
 
 .hero-text {
 	width: auto;
 	margin: auto;
-
 	background-color: white;
 	opacity: 0.7;
 	padding: 20px;
@@ -122,7 +113,7 @@ visited {
 
 .hero-text-md {
 	position: absolute;
-    top: 400px;
+	top: 400px;
 	width: auto;
 	margin: auto;
 	background-color: white;
@@ -139,7 +130,7 @@ visited {
 	color: black;
 	line-height: 4.5rem;
 	text-shadow: 1px 1px grey;
-    font-style: italic;
+	font-style: italic;
 }
 
 .title2 {
@@ -155,7 +146,7 @@ visited {
 	color: black;
 	line-height: 3rem;
 	text-shadow: 1px 1px grey;
-    font-style: italic;
+	font-style: italic;
 }
 
 .title2-md {
@@ -166,22 +157,40 @@ visited {
 	text-shadow: 1px 1px grey;
 }
 
+/* Page Main's layout for Membership Card */
 
-
-body {
-	font-family: 'PT Sans', sans-serif;
-    font-size: 18px;
-	min-height: 100%;
-	padding-bottom: 20px;
-    background-color: #e0f9ff;
+#membershipcard {
+	width: 200px;
+	border: 10px solid white;
+	border-radius: 20px
 }
 
-    /* Boostrap4 Component Cards Deck */
+/* Page Main's layout for motivator section */
 
-#testimonials.card{
-    margin-bottom: 15px;
+#motivator+ul>li {
+	list-style-type: none;
+	padding: 0;
+	margin-left: 0;
 }
 
+#motivator+ul>li::first-letter {
+	font-weight: bold;
+	font-size: 20px;
+}
+
+#motivator+ul>li::before {
+	content: "“"
+}
+
+#motivator+ul>li::after {
+	content: "”"
+}
+
+/* Boostrap4 Component Cards Deck for testimonials*/
+
+#testimonials.card {
+	margin-bottom: 15px;
+}
 
 #testimonials .card-text {
 	font-family: "PT Serif", Serif;
@@ -215,144 +224,83 @@ body {
 	display: block;
 }
 
-h5+p {
-    margin-bottom: 50px;
-}
+/* PAGE MAIN - RESUME PAGE */
+
+/* layout for resume page */
 
 #education li {
-    margin-bottom: 20px;
-
-
-}
-
-
-.card-body {
-	border-radius: 40px;
-	margin: 2px;
-    font-weight: bold;
-    
-}
-
-/* Membership Card */
-
-#membershipcard {
-	width: 200px;
-	border: 10px solid white;
-	border-radius: 20px
-}
-
-#pagemain {
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,1)), color-stop(2%, rgba(224,249,255,1)), color-stop(4%, rgba(224,249,255,1)), color-stop(100%, rgba(224,249,255,1)));
-    background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(224,249,255,1) 2%, rgba(224,249,255,1) 4%, rgba(224,249,255,1) 100%);
-    background: -o-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(224,249,255,1) 2%, rgba(224,249,255,1) 4%, rgba(224,249,255,1) 100%);
-    background: -ms-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(224,249,255,1) 2%, rgba(224,249,255,1) 4%, rgba(224,249,255,1) 100%);
-    background: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(224,249,255,1) 2%, rgba(224,249,255,1) 4%, rgba(224,249,255,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#e0f9ff', GradientType=0 );
-}
-
-#motivator+ul>li {
-
-    padding-left: 0;
-    margin-left: 0;
-}
-
-#motivator+ul>li::first-letter {
-    font-weight: bold;
-    font-size: 20px;
-}
- 
-
- #motivator+ul>li::before {
-    content: "“" 
-}
-
-#motivator+ul>li::after {
-    content: "”" 
+	margin-bottom: 20px;
 }
 
 /* Removing the 'dots' from the lists */
 
-#motivator+ul>li {
-list-style: none;
-padding: 0;
-float: left;
-
-    
-    
-}
-
-#value-proposition+ul>li {
-    list-style-type: none;
-    
-}
-
-
-#education > ul > li{
-	list-style-type: none;  
-}
-
-
-
-#skills > ul >li {
-	list-style-type: none;
-}
-
-#skills > ul >li > img {
-	margin-right: 20px;
-    margin-bottom: 20px;
-    box-shadow: 0 8px 6px -6px black;
-}
-
-#certificates>ul>li {
-	list-style-type: none;
-}
-
-#interest+ul>li {
-    list-style: none;
-    padding-left: 0;
-}
-
+#value-proposition+ul>li,
+#education>ul>li,
+#skills>ul>li,
+#certificates>ul>li,
+#interest+ul>li,
 #volunteering-experience>ul>li {
-	list-style: none;
+	list-style-type: none;
 }
+
+/* Page Main's skill section layout */
+
+#skills>ul>li>img {
+	margin-right: 20px;
+	margin-bottom: 20px;
+	box-shadow: 0 8px 6px -6px black;
+}
+
+/* PAGE MAIN - PORTFOLIO PAGE */
 
 /* CSS Flex for Portfolio page */
 
 #portfolio .card {
-    margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
-/* Page Footer */
+/* Card component for portfolio page */
+
+.card-body {
+	border-radius: 40px;
+	margin: 2px;
+	font-weight: bold;
+}
+
+h5+p {
+	margin-bottom: 50px;
+}
+
+/* PAGE FOOTER */
 
 #pagefooter {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 }
 
+/* PAGE FOOTER - TOP */
+
 /* Boostrap4 Component Pagination */
 
-#pagenavigation>ul>li{
-    float: left;
-
+#pagenavigation>ul>li {
+	float: left;
 }
+
 #pagenavigation>ul>li>.page-link {
 	border: 0px solid white;
-
 }
-
 
 #pagenavigation>ul>li.page-item.disabled {
 	color: black;
 }
 
+/* PAGE FOOTER - MIDDLE */
 
 /* Gradient background for part of footer */
 
 #pagefootermiddle {
 	font-family: 'PT Sans', san-serif;
-
-    background-image: url("../images/footersitemap1920x1080lowres.jpg");
-
+	background-image: url("../images/footersitemap1920x1080lowres.jpg");
 	color: black;
 	padding-top: 1em;
 	padding-bottom: 2em;
@@ -365,7 +313,7 @@ float: left;
 	color: black;
 	margin: 10px 0;
 	padding: 10px 0;
-    min-height: 50px;
+	min-height: 50px;
 }
 
 .contactitem>i {
@@ -387,26 +335,24 @@ float: left;
 }
 
 form {
-    background-color: #8AAFFF;
-    padding: 10px;
+	background-color: #8AAFFF;
+	padding: 10px;
 }
+
+/* PAGE FOOTER - BOTTOM */
 
 /* Site Map Responsive Layout */
 
 #footer-sitemap {
 	font-family: 'PT Sans', san-serif;
-
-
 	background-size: cover;
 }
-
 
 .sitemap-header {
 	font-weight: bold;
 	display: inline-block;
 	margin-bottom: 1em;
 }
-
 
 #footer-sitemap ul {
 	list-style-type: none;
@@ -423,18 +369,16 @@ form {
 	text-decoration: underline;
 }
 
-
 #footer-sitemap {
-    background: rgba(19,19,19,1);
-
-    background: rgba(0,0,0,1);
-    background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(77,91,240,1) 3%, rgba(77,91,240,1) 7%, rgba(33,43,82,1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,1)), color-stop(3%, rgba(77,91,240,1)), color-stop(7%, rgba(77,91,240,1)), color-stop(100%, rgba(33,43,82,1)));
-    background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(77,91,240,1) 3%, rgba(77,91,240,1) 7%, rgba(33,43,82,1) 100%);
-    background: -o-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(77,91,240,1) 3%, rgba(77,91,240,1) 7%, rgba(33,43,82,1) 100%);
-    background: -ms-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(77,91,240,1) 3%, rgba(77,91,240,1) 7%, rgba(33,43,82,1) 100%);
-    background: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(77,91,240,1) 3%, rgba(77,91,240,1) 7%, rgba(33,43,82,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#212b52', GradientType=0 );
+	background: rgba(19, 19, 19, 1);
+	background: rgba(0, 0, 0, 1);
+	background: -moz-linear-gradient(top, rgba(0, 0, 0, 1) 0%, rgba(77, 91, 240, 1) 3%, rgba(77, 91, 240, 1) 7%, rgba(33, 43, 82, 1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0, 0, 0, 1)), color-stop(3%, rgba(77, 91, 240, 1)), color-stop(7%, rgba(77, 91, 240, 1)), color-stop(100%, rgba(33, 43, 82, 1)));
+	background: -webkit-linear-gradient(top, rgba(0, 0, 0, 1) 0%, rgba(77, 91, 240, 1) 3%, rgba(77, 91, 240, 1) 7%, rgba(33, 43, 82, 1) 100%);
+	background: -o-linear-gradient(top, rgba(0, 0, 0, 1) 0%, rgba(77, 91, 240, 1) 3%, rgba(77, 91, 240, 1) 7%, rgba(33, 43, 82, 1) 100%);
+	background: -ms-linear-gradient(top, rgba(0, 0, 0, 1) 0%, rgba(77, 91, 240, 1) 3%, rgba(77, 91, 240, 1) 7%, rgba(33, 43, 82, 1) 100%);
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(77, 91, 240, 1) 3%, rgba(77, 91, 240, 1) 7%, rgba(33, 43, 82, 1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#212b52', GradientType=0);
 	padding-top: 4em;
 	padding-bottom: 2em;
 }
