--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Gochi+Hand|Open+Sans|PT+Sans|PT+Serif&display=swap');
 body {
-	font-family: 'PT Sans', 'Open Sans', sans-serif;
+	font-family: 'Open Sans', 'PT Sans', sans-serif;
 	font-size: 18px;
 	min-height: 100%;
 	padding-bottom: 20px;
@@ -22,9 +22,20 @@ h1 {
 	text-shadow: 1px 1px gray;
 }
 
+h2, h3, h4, h6 {
+        font-family: 'PT Sans', 'Open Sans', sans-serif;
+}
+
+h4 {
+    font-family: 'PT Sans', 'Open Sans', sans-serif;
+	margin: 0.5rem 0;
+	font-weight: bold;
+}
+
 h5 {
+    font-family: 'PT Sans', 'Open Sans', sans-serif;
 	font-size: 1.2em;
-	margin: 0;
+	margin: 0.5rem 0;
 	font-weight: bold;
 }
 
