--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,10 @@ h4 {
 	font-weight: bold;
 }
 
+#footer-sitemap>section>h4 {
+	color: #8AAFFF;
+}
+
 h5 {
     font-family: 'PT Sans', 'Open Sans', sans-serif;
 	font-size: 1.2em;
